<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Foodie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="welcom">嗨！欢迎来到吃货世界</string>
    <string name="personal_account_center">账户</string>
    <string name="personal_account">账户</string>
    <string name="personal_edit_info">编辑</string>
    <string name="personal_setting_center">设置</string>
    <string name="personal_language">语言</string>
    <string name="register">用户注册</string>
    <string name="register_useraccount">请输入用户账号</string>
    <string name="register_password">请输入用户密码</string>
    <string name="register_repassword">请再次输入密码</string>
    <string name="activity_register_btn">立即注册</string>
    <string name="login">登录</string>
    <string name="loginacount">用户名</string>
    <string name="loginpassword">密  码</string>
    <string name="registerfree">免费注册</string>
       <string name="loginorregister">登录/注册</string>
         <string name="URL">http://123.57.36.82/foodie/ws/</string>
    <string name="generic_server_down">Our server is under maintenance. Please wait until we fix it</string>
    <string name="generic_error">Some error ocured!</string>
    <string name="no_internet">There is no internet connection!</string>
    <string name="login_success">Login Successful</string>
    <string name="register_success">Register Successful</string>
    <string name="user_not_exists">The User does not exists</string>
    <string name="password_incorect">The password is not correct</string>
    <string name="bad_parameters">Bad parameters!</string>
    <string name="booking_successful">Booking Successuful</string>
   	<string name="no_user">Please login before</string>
    

</resources>