<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_ebuy_detail"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/pub_color_twelev"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/pub_color_twelev"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/rl_myebuy_title"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_myebuy_title"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/layout_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_myebuy_welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center_vertical"
                        android:text="@string/welcom"
                        android:textColor="@color/white"
                        android:textSize="@dimen/android_public_textsize_18pt" />

                    <Button
                        android:id="@+id/btn_myebuy_login"
                        android:layout_width="@dimen/ios_public_space_260px"
                        android:layout_height="@dimen/ios_public_space_70px"
                        android:layout_marginTop="@dimen/android_public_space_20px"
                        android:background="@color/white"
                        android:text="@string/loginorregister"
                        android:textSize="@dimen/android_public_textsize_18pt" />

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/android_public_textsize_18pt"
                        android:visibility="gone" />
                </LinearLayout>
            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/pub_margin_or_padding_space_half_of_one"
                android:scaleType="fitXY"
                android:src="@drawable/divide_line_input" />

            <TextView
                style="@style/PersonalCenterText"
                android:text="@string/personal_account_center" />

            <LinearLayout style="@style/PersonalMainLayoutStyle" >

                <RelativeLayout
                    android:id="@+id/relativelayout_change_pwd"
                    style="@style/PersonalBottomStyle" >

                    <ImageView
                        android:id="@+id/personal_icon_08"
                        style="@style/PersonalIconStyle"
                        android:src="@drawable/android_my_jd_account_safe" />

                    <TextView
                        style="@style/PersonalTextStyle"
                        android:layout_toRightOf="@id/personal_icon_08"
                        android:text="@string/personal_account" />

                    <ImageView
                        style="@style/PersonalRightIconStyle"
                        android:src="@drawable/android_list_idex" />
                </RelativeLayout>

                <View style="@style/PersonalLine" />

                <RelativeLayout
                    android:id="@+id/relativelayout_change_info"
                    style="@style/PersonalBottomStyle" >

                    <ImageView
                        android:id="@+id/personal_icon_09"
                        style="@style/PersonalIconStyle"
                        android:src="@drawable/android_my_jd_discuss" />

                    <TextView
                        style="@style/PersonalTextStyle"
                        android:layout_toRightOf="@id/personal_icon_09"
                        android:text="@string/personal_edit_info" />

                    <ImageView
                        style="@style/PersonalRightIconStyle"
                        android:src="@drawable/android_list_idex" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                style="@style/PersonalCenterText"
                android:text="@string/personal_setting_center" />

            <LinearLayout style="@style/PersonalMainLayoutStyle" >

                <View style="@style/PersonalLine" />

                <RelativeLayout
                    android:id="@+id/relativelayout_set_lang"
                    style="@style/PersonalBottomStyle" >

                    <ImageView
                        android:id="@+id/personal_icon_10"
                        style="@style/PersonalIconStyle"
                        android:src="@drawable/android_my_jd_return_repair" />

                    <TextView
                        style="@style/PersonalTextStyle"
                        android:layout_toRightOf="@id/personal_icon_10"
                        android:text="@string/personal_language" />

                    <ImageView
                        style="@style/PersonalRightIconStyle"
                        android:src="@drawable/android_list_idex" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>